added logo and academics

--- a/en/courses/vedas.html
+++ b/en/courses/vedas.html
@@ -33,10 +33,21 @@
   <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon">
 
 </head><body data-spy="scroll" data-target="#mainNav">
-<nav class="navbar navbar-expand-lg fixed-top trans-navigation">
+<!--
+<div class="bg-white">
   <div class="container">
+    <h3 class="text-center p-2">
+      University of Applied Vedic Sciences (Online)
+    </h3>
+  </div>
+</div>
+-->
+<nav class="navbar navbar-expand-lg fixed-top trans-navigation">
+  <div class="container">    
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
+      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +55,6 @@
         <i class="fa fa-bars"></i>
       </span>
     </button>
-
     <div class="collapse navbar-collapse justify-content-end" id="mainNav">      
       <ul class="navbar-nav ">
         <li class="nav-item">
@@ -59,9 +69,9 @@
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/faculty.html">Faculty</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/blog.html">Blog</a>
-        </li>
+        </li>-->
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/contact.html">Contact</a>
         </li>
@@ -78,11 +88,106 @@
         <div class="pt-4 pb-4">
                 <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
         </div>
+        <h3 class="pt-4 pb-4">Introduction to Vēdas</h3>
+        <p>
+            Vēdas contain all factual education (Vidya) of past, present and future. 
+            Vēdas contain basically two types of education1, (1) Apara Vidya and (2) Para Vidya.  
+            From elementary particle to Prakrithi (Nature) all materials and their properties, 
+            functions and what can be achieved from them are described in Apara Vidya. The true knowledge of 
+            God is given by Para Vidya. Vēdas contain Vidyas that can be further classified as (a) 
+            Vignana (All materials True Knowledge) (b) Karma (Duties) (c) Upaasana (Being near to God) 
+            (d) Gnana (Knowledge).  Utilizing Karma, Upaasana and Gyana properly and knowing all the 
+            materials from the elementary particles to God and getting benefit from them is called Vignana1.  
+        </p>
+        <p>
+            Vēdas are given by God in the form of Rig-Vēda, Yajur-Vēda, Sama-Vēda and Atharva-Vēda. 
+            Rig-Vēda contains 10,522 Mantras, Yajur-Vēda contains 1,975 Mantras, Sama-Vēda contains 1,875 Mantras and 
+            Atharva-Vēda contains 5,977 Mantras. The total Vēda Mantras are 20349.
+        </p>
+        <p>
+            Vēdas are the knowledge of God.
+            At the beginning of creation God gave the knowledge of four Vēdas to four Rishis. 
+            Rig Vēd to Agni, Yajur Vēd to Vāyu, Sāma Vēd to Surya and Atharva Vēd to Angirasa. 
+            Here the names Agni, Vāyu, Surya and Angirasa belong to Rishis who are humans and are not of 
+            any Devatha (divine material) found in Vēdas. 
+            The language of Vēdas is Samskrutham (Sanskrit).
+            According to Rishis Vēdas are described as follows. Those in which the properties, activities and 
+            nature of God are described and in which there is no dispute in the order of creation of the 
+            world and in which proofs of science can be found and in which there is no illusion or 
+            confusion and in which cause and reason about the universe and its constituents are 
+            described and in which truth and only truth is given and which are self vouching are 
+            called Vēdas, Sruthis, Nigamas, Chanddass or Mantras.
+        </p>
+        <h5 class="mb-3">What different Maharishis got to say on the Authorship and importance of Vēdas?</h5>
+        <p>
+            According to Manu2 “Every Arya must read or listen to Vēda at least once in a day”. <br/>
+            According to Rishi Kanva “The descriptions in Vēdas is filled with knowledge and are given by God. <br/> 
+            The education in it is completely impartial and only truth is given. I agree to take Vēdas as proof for describing science”. <br/>
+            According to Rishi Goutham “Vēdas are eternal and must be taken as proof for Science”. <br/>
+            According to Maharishi Patanjali “Our Ancients Agni, Vāyu, Surya, Angirasa, Brahma were born at the beginning of the world (Off course along with many others). 
+            From them to us God is the teacher and with the Vēdas He gave us knowledge”. <br/>
+            According to Maharishi Kapila “From the knowledge of God, Vēdas were evolved. So Vēdas are self vouching. No other proof is required”. <br/>
+            According to Maharishi Sri Krishna Dvipayana (Vyasa Maharishi) “The four Vēdas are filled with all types of education. 
+            They are self radiant and contain only truth and nothing but truth. Other than God no one could give them to us”. <br/>
+            According to Maharishi Dayanada Saraswathi “Vēdas are given by God. God is omnipotent, ubiquitous and has eternal knowledge. 
+            Therefore His Vēdas are without illusion and are self vouching”. 
+        </p>
+
+        <h5 class="mb-3">Who can read Vedas?</h5>
+        <p class="mb-4">   
+         
+            According to Maharishi Dayanada Saraswathi “Vēdas are given by God. 
+          God is omnipotent, ubiquitous and has eternal knowledge. 
+          Therefore His Vēdas are without illusion and are self vouching”. 
+        </p>
+        <p>
+          <img src="/assets/images/about/Yajur_26_2.jpg" alt="" class="img-fluid">
+        </p>
+        <p>
+          According to Yajur Vēda mantra (26.2) (The above mantra) everyone in the universe is eligible to read Vēdas.
+          According to Manu “educating people by teaching Vēdas is the best act that any individual or society can do”. 
+        </p>
+        <p>
+          Vēdas are the knowledge of God.
+          At the beginning of creation God gave the knowledge of four Vēdas to four Rishis. Rig Vēd to Agni, Yajur Vēd to Vāyu, 
+          Sāma Vēd to Surya and Atharva Vēd to Angirasa. Here the names Agni, Vāyu, Surya and Angirasa belong to 
+          Rishis who are humans and are not of any Devatha (divine material) found in Vēdas. 
+          The language of Vēdas is Samskrut (Sanskrit).
+          According to Rishis Vēdas are described as follows. Those in which the properties, 
+          activities and nature of God are described and in which there is no dispute in the order of 
+          creation of the world and in which proofs of science can be found and in which there is no illusion or 
+          confusion and in which cause and reason about the universe and its constituents are described and in 
+          which truth and only truth is given and which are self vouching are called Vēdas, 
+          Sruthis, Nigamas, Chanddass or Mantras.
+          </p>
+          <h5 class="mb-3">What is the essence of Vēdas? </h5>
+          <p class="mb-4">
+            To know God. <br/>
+            To know what to do according to science and to know what is science.<br/>
+            To know every dharma and act accordingly.<br/>
+            To perform the duties righteously.<br/>
+            To get salvation (Mōksham). <br/>
+          </p>
+        <p>
+            References:<br/>
+            1. RigVeda Bhasyam by Maharshi Dayananda Saraswathi <br/>
+            2. Manu Smruthi
+        </p>
         <h3 class="pt-4 pb-4">Academic Courses in Vēdas (4)</h3>
+        <p>
+            
+        </p>
         <ul>
             <li>
                 <h4  id="V-01" class="text-primary">1. Rigvēda (V-01)</h4>
-                <p>                   
+                <p>               
+                    Rig Vēda contains a total of 10,522 Mantras. <br/>
+                    Rig Vēda is called Gnana Kanda. <br/>
+                    Rig Vēda contains knowledge about every matter that is present in the world including God and their properties.<br/>
+                    Rig Vēda is divided into 10 Mandalas, 85 Anuvakas, 1,028 Sukthas and contains 10,522 Mantras.<br/>
+                    These Mantras have a Rishi name or several Rishis names (Those who first realized the mantra meaning), 
+                    Devatha (The prominent meaning on which the mantra was given), Chanddass (Type of Poem) and 
+                    Swara (Type of musical note which appoints the meaning to the mantra)    
                 </p>       
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -91,7 +196,14 @@
 
             <li>
                 <h4  id="V-02" class="text-primary">2. Yajurvēda (V-02)</h4>
-                <p>                   
+                <p>      
+                    Yajur Vēda contains 40 Adyayas and 1,975 Mantras. <br/>
+                    Yajur Vēda contains Karma Kanda. <br/>
+                    Yajur Vēda Mantras have Rishi, Devatha, Chanddass and Swara. <br/>
+                    Yajur Vēda describes every act that humans must follow. Also it describes government, 
+                    dharma, yagna, getting education from Vēdas, how to win over enemies in the war, 
+                    how to use agni and such materials in vehicles, how to live more than 300 years, 
+                    medicine, mathematics, construction of buildings, what food should be taken, description of God, final rituals etcetera.             
                 </p>     
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -101,6 +213,13 @@
             <li>
                 <h4  id="V-03" class="text-primary">3. Samavēda (V-03)</h4>
                 <p>                   
+                    Sāma Vēda contains 1,875 Mantras. <br/>
+                    Sāma Vēda is divided into Two Main Parts. (1) Purvarchika   (2) Uttarachika <br/>
+                    In the first part there are 3 kandas, 6 prapatakas, 6 adhyayas and mantras. <br/>
+                    In the second part there are 9 prapatakas, 21 adhyayas and mantras. <br/>
+                    These Mantras have Rishi, Devatha, Chanddass and Swara. <br/>
+                    This Vēda is sung as a song. <br/>
+                    In Sāma Vēda mainly Upāsana of God is described.
                 </p>    
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -109,7 +228,15 @@
 
             <li>
                 <h4  id="V-04" class="text-primary">4. Atharvavēda (V-04)</h4>
-                <p>                   
+                <p>         
+                    Atharva Vēda contains 5,977 Mantras. <br/>
+                    There are 20 Kandas in this Vēda and each mantra has a Rishi, Devatha and Chanddass and Swara. <br/>
+                    There are 9 branches in this Vēda. (1) Charana Vidya which contains medicine and surgery. 
+                    (2) Deva Darsana which contains Physical world knowledge. (3) Brahma Vēda contains Brahma Gynana. 
+                    (4) Jalad contains knowledge about water (5) Jajvali contains knowledge about Agni 
+                    (6) Shounaka contains about Brahma (7) Modha contains knowledge about how to increase mind and 
+                    life of a person. (8) Pipalad contains the duties of jeeva and Brahma (9) Tantra contains 
+                    knowledge about electricity, scientific activities, chemical, air, water, poison, artillery etcetera.          
                 </p>   
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -129,11 +256,15 @@
     <div class="row justify-content-around">
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
+          <!--
           <a class="navbar-brand" href="/en/index.html">
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
+          -->
           <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with outcome-driven real-world projects.</p>
+            organization with emphasis on outcome-driven real-world projects.</p>
+
+            <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -141,7 +272,7 @@
           <h4>About</h4>
           <ul>
             <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/academics.html">Academics</a></li>
+            <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
             <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
@@ -152,7 +283,7 @@
         <div class="footer-widget footer-link">
           <h4>Links</h4>
           <ul>
-            <li><a href="/en/accreditation.html">Accreditation Status</a></li>
+            <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
