--- a/en/scholarship.html
+++ b/en/scholarship.html
@@ -34,10 +34,21 @@
 
 </head><body data-spy="scroll" data-target="#mainNav">
 
-<nav class="navbar navbar-expand-lg fixed-top trans-navigation">
+<!--
+<div class="bg-white">
   <div class="container">
+    <h3 class="text-center p-2">
+      University of Applied Vedic Sciences (Online)
+    </h3>
+  </div>
+</div>
+-->
+<nav class="navbar navbar-expand-lg fixed-top trans-navigation">
+  <div class="container">    
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
+      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +56,6 @@
         <i class="fa fa-bars"></i>
       </span>
     </button>
-
     <div class="collapse navbar-collapse justify-content-end" id="mainNav">      
       <ul class="navbar-nav ">
         <li class="nav-item">
@@ -60,9 +70,9 @@
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/faculty.html">Faculty</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/blog.html">Blog</a>
-        </li>
+        </li>-->
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/contact.html">Contact</a>
         </li>
@@ -172,11 +182,15 @@
     <div class="row justify-content-around">
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
+          <!--
           <a class="navbar-brand" href="/en/index.html">
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
+          -->
           <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with outcome-driven real-world projects.</p>
+            organization with emphasis on outcome-driven real-world projects.</p>
+
+            <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -184,7 +198,7 @@
           <h4>About</h4>
           <ul>
             <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/academics.html">Academics</a></li>
+            <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
             <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
@@ -195,7 +209,7 @@
         <div class="footer-widget footer-link">
           <h4>Links</h4>
           <ul>
-            <li><a href="/en/accreditation.html">Accreditation Status</a></li>
+            <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
