--- a/en/about.html
+++ b/en/about.html
@@ -33,10 +33,21 @@
   <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon">
 
 </head><body data-spy="scroll" data-target="#mainNav">
-<nav class="navbar navbar-expand-lg fixed-top trans-navigation">
+<!--
+<div class="bg-white">
   <div class="container">
+    <h3 class="text-center p-2">
+      University of Applied Vedic Sciences (Online)
+    </h3>
+  </div>
+</div>
+-->
+<nav class="navbar navbar-expand-lg fixed-top trans-navigation">
+  <div class="container">    
+    <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo">
+      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
       aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +55,6 @@
         <i class="fa fa-bars"></i>
       </span>
     </button>
-
     <div class="collapse navbar-collapse justify-content-end" id="mainNav">      
       <ul class="navbar-nav ">
         <li class="nav-item">
@@ -59,9 +69,9 @@
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/faculty.html">Faculty</a>
         </li>
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/blog.html">Blog</a>
-        </li>
+        </li>-->
         <li class="nav-item">
           <a class="nav-link smoth-scroll" href="/en/contact.html">Contact</a>
         </li>
@@ -166,7 +176,7 @@
           Vedic citizens.</p>
       </div>
 
-      <div class="col-lg-6 col-md-4">
+      <div class="col-lg-6 col-md-4 align-top">
         <img src="/assets/images/about/about-5.jpg" alt="" class="img-fluid w-100">
       </div>
     </div>
@@ -177,7 +187,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-md-4">
-          <img src="/assets/images/about/graduation.png" alt="" class="img-fluid w-100">
+          <img src="/assets/images/about/online_class.jpg" alt="" class="img-fluid w-100">
         </div>
         <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
           <h3 class="mb-3">Our Objectives</h3>          
@@ -263,14 +273,7 @@
     <div class="pt-4 pb-4">
 
     </div>
-    <h4 class="pb-4">Legal Authority</h4>
-    <p>
-      <span class="text-danger">The following statement is required by law:</span><br/>
-      Degree programs of study offered by University of Applied Sciences (online) have been declared exempt from the requirements 
-      for licensure under provisions of North Carolina General Statutes Section (G.S.) §116-15(d) for 
-      exemption from licensure with respect to religious education. Exemption from licensure is not based upon 
-      any assessment of program quality under established licensing standards.
-    </p>
+
     
     <!--
     <div class="pt-4">
@@ -284,6 +287,41 @@
 
   
 </section>
+
+<section class="section-padding bg-gray">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8">
+        <div>
+          <h3 class="mb-2 text-white">Legal Authority</h3>
+          <p class="text-white">
+            <span class="text-white font-weight-bold">The following statement is required by law:</span><br/>
+            Degree programs of study offered by University of Applied Sciences (online) have been declared exempt from the requirements 
+            for licensure under provisions of North Carolina General Statutes Section (G.S.) §116-15(d) for 
+            exemption from licensure with respect to religious education. Exemption from licensure is not based upon 
+            any assessment of program quality under established licensing standards.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section-padding">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-4">
+        <img src="/assets/images/about/graduation.png" alt="" class="img-fluid w-100">
+      </div>
+      <div class="col-lg-6 col-sm-12 col-md-8 mb-4">
+        <h3 class="mb-3">Accreditation Status</h3>
+        <p class="mb-4">
+          
+        </p>        
+      </div>      
+    </div>
+  </div>
+  </section>
 <!--  ABOUT AREA END  -->
 
 <!--  FOOTER AREA START  -->
@@ -292,11 +330,15 @@
     <div class="row justify-content-around">
       <div class="col-lg-4">
         <div class="footer-widget footer-link">
+          <!--
           <a class="navbar-brand" href="/en/index.html">
             <img src="/assets/images/logo.png" alt="University of Vedic Sciences" class="img-fluid b-logo d-flex">
           </a>         
+          -->
           <p>University of Applied Vedic Sciences (online) is the research oriented academic 
-            organization with outcome-driven real-world projects.</p>
+            organization with emphasis on outcome-driven real-world projects.</p>
+
+            <p class="pt-2 font-weight-bold">Vēdas are the knowledge of God and everyone in the universe is eligible to read Vēdas.</p>
         </div>
       </div>
       <div class="col-lg-2 col-md-4 col-6">
@@ -304,7 +346,7 @@
           <h4>About</h4>
           <ul>
             <li><a href="/en/about.html">About</a></li>
-            <li><a href="/en/academics.html">Academics</a></li>
+            <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
             <li><a href="/en/advisory.html">Advisory Board</a></li>                  
           </ul>
@@ -315,7 +357,7 @@
         <div class="footer-widget footer-link">
           <h4>Links</h4>
           <ul>
-            <li><a href="/en/accreditation.html">Accreditation Status</a></li>
+            <li><a href="/en/academics.html">Academics</a></li>
             <li><a href="/en/contact.html">Contact</a></li>
             <li><a href="/en/privacy.html">Privacy Policy</a></li>
             <li><a href="/en/terms.html">Terms & Conditions</a></li>
