--- a/en/courses/brahmanas.html
+++ b/en/courses/brahmanas.html
@@ -46,7 +46,7 @@
   <div class="container">    
     <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -91,26 +91,106 @@
         <h3 class="pt-4 pb-4">Academic Courses in Brāhmanās (4)</h3>
         <ul>
             <li>
-                <h4  id="B-01" class="text-primary">1. Ithareya Brāhmanā (B-01)</h4>
+                <h4  id="B-01" class="text-primary">1. Rigvēda Brāhmanās (B-01)</h4>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Aitarēya Brāhmana</h5>
                 <p>
+                    Aitarēya Brāhmana belongs to Shākala Shākha of the Rigvēda. This work is ascribed to Mahidāsā Aitarēya and is 
+                    divided into eight Panchikās and each of the Panchikā is divided into eight adhyāyās. 
+                    Totally, it consists of forty adhyāyās. The first six panchikās of Aitarēya Brahmana dealing with 
+                    Soma Sacrifice (fire sacrifice ritual) and in the last two panchikās describe about Rājyābhishēka.                 
+                </p>
+                <p>
+                    Aitarēya Āranyaka belongs to the Shākala recension of the Rigveda and it is divided into five major segments, 
+                    known as Āranyakās. 
+                </p>
+                <p>
+                The first Āranyaka deals with Mahāvrata, second Āranyaka about significance of the 
+                    Ukthās and the Upanishadic text, third Āranyaka about spiritual meaning of various interpretation of the 
+                    Samhitas including padapāta, kramapātha etc. for recitation of the Vēda mantras along with the Svarās, 
+                    fourth Āranyaka about collection of Mahānāmni verses and the fifth Āranyaka deals about mystic Shāstrās. 
+                    The Aranyaka signifies symbolic meaning of the Vedic sacrifices. 
+                </p>
+                <p>
+                    The fourth, fifth and sixth chapter of the 
+                    Second Aranyaka is known as Aitarēya Upanishad. The speculative thoughts, homogeneous body of doctrines and 
+                    deeply absorbing concepts are established in this Aranyaka by Mahidāsā Aitarēya. Out of the five Aranyakas, 
+                    first, second and third Aranyaka are attributed to Mahidāsā Aitarēya, fourth Āranyaka to Āshvalayana and 
+                    fifth Āranyaka to sage Shaunaka. Aitarēya Āranyaka presents highest level of spiritual thoughts and 
+                    explains about universality.
                 </p>     
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Kaushitaki  (Shankhayana) Brāhmana</h5>
+                <p>
+                    Kaushitaki Brāhmana associated with Bāskala Shākha of Rigveda and is also called as Sankhyāyana Brāhmana. 
+                    It is divided into thirty chapters and 226 Khāndas. The first six chapters dealing with food sacrifice and 
+                    the remaining to Soma sacrifice. This work is ascribed to Sankhyāyana or Kaushitaki. The feature of 
+                    Sankhyāyana-Brahmana is that in addition to the Aitharēya, there is also the interpretation of 
+                    Ishtis and animals besides Sōmayāga. Shankaracharya in Brahmasūtra and Panini in Astādhyāyi have 
+                    mentioned the name of Kaushitaki Brahmana.
+                </p>
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
             </div>          
             </li>
 
             <li>
-                <h4  id="B-02" class="text-primary">2. Shathapatha Brāhmanā (B-02)</h4>
+                <h4  id="B-02" class="text-primary">2. Yajurvēda Brāhmanās (B-02)</h4>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Shatapatha Brāhmana</h5>
                 <p>
+                    Shatapatha Brāhmana, Mādhyandina recension belongs to Shukla Yajurveda. It is divided into 14 Kāndas, 
+                    100 Adhyāyās, 68 Prapātakās, 436 Brāhmanās and 7179 Kandikās. The tenth Kānda is called Agnirahasya, 
+                    eleventh is Ashtādhyāyi and Kāndas twelfth to fourteenth are called Parisishta.
                 </p>     
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Kanva Shatapatha Brāhmana</h5>
+                <p>
+                    1.	Ekapat, 2. Haviryajya, 3. Udhari, 4. Adharva, 5. Graha, 6. Vājapeya, 
+                    7. Rājasūya, 8. Ukhasambharana, 9. Hastighata, 10. 	Chiti, 11. Sachiti, 
+                    12. Agnirahasya, 13. Ashtādhyāyi, 14. Madhyama, 15. Ashwamēdha, 16. Pravargya. 
+                </p>    
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Taittiriya Brāhmana</h5>
+                <p>
+                    Taittiriya Brāhmana belongs to Krishna Yajurveda and divided into three khandas. 
+                    It is considered that part of the Kataka Brahmana is also included in this shākha. 
+                    It has both mixed of mantras and Brahmans and composed in poetic and prose manner. It has three ashtakās. 
+                </p>   
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Taittiriya Brāhmana</h5>
+                <p>
+                    The Taittiriya Aranyaka is associated with Taittiriya recension of the Krishna Yajurveda and divided into ten chapters.
+                </p>
+                <p>It deals with style of fire-brick pilling, Mahā Yajnās, recitation of the Vēdas 
+                    (including sacred thread, daily prayer, sacrifice to the ancestors and the Brahma Yajna), 
+                    procedures for performing several other hōmās and Yajnās, mantras used in the Pravargya rituals, 
+                    records of the Pitrimēdha Yajna and the Upanishadic thoughts of the Taittiriya and Mahā nārāyana Upanishad.
+                </p>
+                <p>Out of the ten chapters, seventh, eighth and ninth chapters are called as Taittiriya Upanishad, 
+                    and tenth chapter is called as Mahā nārāyana Upanishad. Taittiriya Aranyaka not only identified 
+                    as a sacred text for ritual practices, but also the eternal truths and highest level of 
+                    philosophical thoughts are mentioned in a symbolic manner.
+                </p>   
+
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
             </div>          
             </li>
 
             <li>
-                <h4  id="B-03" class="text-primary">3. Sāma Brāhmanā (B-03)</h4>
+                <h4  id="B-03" class="text-primary">3. Samavēda Brāhmanās (B-03)</h4>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Tāndya Mahā Brāhmana</h5>
                 <p>
+                    Tāndya Mahā Brāhmana or Panchavimsa Brāhmana belongs to both Kauthuma and Ranayaniya Shākha of the Sāmaveda. 
+                    It is consisting of twenty-five prapāthakās and 347 khāndas.
+                </p>
+                <p>Tāndya Brāhmana describes about Jyotishtōma, Ukthya, Atirātra, Prakrtis of ekāhas and ahinās, 
+                    Sōma prayaschittas, Dvadashaha rite, collection of Yajus and Vistutis.
+                </p>
+                    <p>It is famous for ancient legends. According to Sāma vidhāna Brahmana, 
+                        this work is ascribed to Acharya Tandi.
                 </p>  
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -118,9 +198,85 @@
             </li>
 
             <li>
-                <h4  id="B-04" class="text-primary">4. Gōpatha Brāhmanā (B-04)</h4>
+                <h4  id="B-04" class="text-primary">4. Atharvavēda Brāhmanās (B-04)</h4>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Gōpatha Brāhmana</h5>
                 <p>
+                    The Gōpatha Brāhmana is associated with the Atharva Vēda and divided into two khandas (chapters), i.e., 
+                    Pūrvabhāga and Uttarabhāga. The Pūrvabhāga is divided into 5 prapātakās and 135 kandikas and the 
+                    Uttarabhāga is divided into 6 prapātakās and 123 kandikas. 
+                </p>
+                <p>
+                    It is considered that this Brahmana is 
+                    associated with both Shaunaka and Paippalāda Shākha of the Atharva Vēda.
                 </p> 
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Shadavimsa Brāhmana</h5>
+                <p>Shadavimsa Brāhmana belongs to Samaveda and divided into five Prapātakās. 
+                    It is considered as an appendix to the Panchavimsha Brāhmana and its twenty-sixth prapātaka. 
+                    It consists of five prapātakās and divided into 7, 10, 12,7,12 khandas in the respectively.
+                </p>
+               
+                <h5 class="pt-4 pb-4 font-weight-bold">Sāma Vidhana Brāhmana</h5>
+                <p>
+                    Sāma Vidhana Brāhmana is associated with Samaveda. It consists of three prapātakās and divided 
+                    into 8, 8, and 9 khandas respectively. Totally, there are twenty-five khandas. 
+                    It deals about abhichārās.                    
+                </p>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Ārshēya Brāhmana</h5>
+                <p>
+                    Ārshēya Brāhmana belongs to Sāma Vēda and divided into 3 prapātakās. 
+                    First prapātaka consists of 28 khandas, second prapātaka, 25 khandas and third prapātaka, 29 khandas. 
+                    Totally, there are 82 Khandas (chapters). This Brāhmana is considered as the Arshanukramani of the Sāmās.                   
+                </p>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Dēvatadhyāya Brāhmana</h5>
+                <p>
+                    Dēvatadhyāya Brāhmana is related to Sāma Vēda and is divided into 3 khandas, 
+                    having 26, 11 and 25 kandikās respectively. It describes about the Chandas (Vedic metres).                  
+                </p>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Chāndogya Brāhmana</h5>
+                <p>
+                    Chāndogya Brāhmana is divided into ten prapātakās (chapters). 
+                    Its first two prapātakās (chapters) form the Mantra Brāhmana and each of them is divided 
+                    into eight khandas (sections). Prapātakās 3 to 10 form the Chāndogya Upanishad. 
+                </p>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Samhitōpanishad Brāhmana</h5>
+                <p>
+                    Samhitōpanishad Brāhmana is associated with the Sāma Vēda and has 1 prapātaka (chapter) 
+                    divided into five khandas (sections). It records the Aranya gāna and Sāma gāna of the 
+                    Sāma Vēda and some of the verses of the Brāhmanās.
+                </p>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Vansha Brāhmana</h5>
+                <p>
+                    Vansha Brāhmana belongs to Sāma Vēda and consists of one short chapter. 
+                    It describes detailing successions of teachers and disciples similar to the Jaimiya Upanishad Brāhmana.
+                </p>
+
+                <h5 class="pt-4 pb-4 font-weight-bold">Talavakāra Āraṇyaka (Jaiminiyopanishad Darshana) Brāhmana</h5>
+                <p>
+                    Talavakāra Āraṇyaka belongs to Jaimini Śhākha of Sāma Vēda. 
+                    This is only available Āraṇyaka related to Sāma Vēda. It is also known by the 
+                    name ‘Jaiminīya Upanishad Brāhmaṇa’ or Jaiminīya Talvakāra Upaniṣhad Brāhmaṇa.’ 
+                    According to the Mangalācaraṇa of this Āraṇyaka, Jaimini was the teacher of Talavakāra Ṛṣi, 
+                    this text, therefore, can be regarded as written by Talavakāra, a student of Jaimini. 
+                    The Āraṇyaka is divided into four chapters (Adhyāya) which are again divided into subsections 
+                    called Anuvāka and Khaṇḍa.                   
+                </p>
+                <p>
+                    Talavakāra Āraṇyaka is important for its ancient language, terminology, grammatical forms, 
+                    and also for its historical and mythological stories (akhyāna) which indicate rituals and beliefs of those times. 
+                    It describes few religious beliefs which are not found elsewhere, and this attests that 
+                    Talavakāra Āraṇyaka would be of earlier times. Importance of Om and Gāyatri is described here again and again. 
+                    Like other Brāhmaṇa texts it does not elaborate rituals in length but gives more space to Sāma-upāsanā. 
+                    This may be the reason why it is considered as an Āraṇyaka. Through its contents, 
+                    it looks close to Chāndogya Upaniṣhad.
+                </p>
+
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
             </div>              
@@ -156,7 +312,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
+            <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
       </div>
@@ -175,7 +331,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>support@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
         </div>
       </div>
     </div>
