--- a/en/onepage-text.html
+++ b/en/onepage-text.html
@@ -47,7 +47,7 @@
   <div class="container">    
     <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -139,10 +139,10 @@ Start Call To Action
       <li class="list-inline-item pb-4 align-top">
         
         <label class="font-weight-bold text-primary">Brāhmanās (4) </label> <br/>
-        (1) <a class="course" href="/en/courses/brahmanas.html#B-01">Ithareya(B-01)</a> <br/>
-        (2) <a class="course" href="/en/courses/brahmanas.html#B-02">Shathapatha (B-02)</a> <br/>
-        (3) <a class="course" href="/en/courses/brahmanas.html#B-03">Sāma (B-03)</a> <br/>
-        (4) <a class="course" href="/en/courses/brahmanas.html#B-04">Gōpatha (B-04)</a>
+        (1) <a class="course" href="/en/courses/brahmanas.html#B-01">Rigvēda Brāhmanās (B-01)</a> <br/>
+        (2) <a class="course" href="/en/courses/brahmanas.html#B-02">Yajurvēda Brāhmanās (B-02)</a> <br/>
+        (3) <a class="course" href="/en/courses/brahmanas.html#B-03">Samavēda Brāhmanās (B-03)</a> <br/>
+        (4) <a class="course" href="/en/courses/brahmanas.html#B-04">Atharvavēda Brāhmanās (B-04)</a>
       </li>
       <li class="list-inline-item pb-4 align-top">        
         <label class="font-weight-bold text-primary">Upavedas (4)</label> <br/>
@@ -221,7 +221,8 @@ Start Call To Action
     </p>
     <ul class="list-inline">
       <li class="list-inline-item pb-4 align-top">
-        <label class="font-weight-bold">Certificate Course</label> <br/>
+        <label class="font-weight-bold">Associate Degree Course</label> <br/>
+        <label class="font-weight-bold">Certification Course</label> <br/>
         <label class="font-weight-bold">Undergraduate Degree</label> <br/>
         <label class="font-weight-bold">Master's Degree</label> <br/>
         <label class="font-weight-bold">Doctorate / PhD</label> <br/>
@@ -898,7 +899,7 @@ Start Call To Action
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
+            <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
       </div>
@@ -917,7 +918,7 @@ Start Call To Action
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>support@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
         </div>
       </div>
     </div>
