--- a/en/courses/applied-vedic-sciences.html
+++ b/en/courses/applied-vedic-sciences.html
@@ -46,7 +46,7 @@
   <div class="container">    
     <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -81,6 +81,8 @@
 </nav>
 <!--MAIN HEADER AREA END -->
 
+<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
+
 <section class="pt-4">
     <div class="container pt-4">
         <div class="pt-4 pb-4">
@@ -107,7 +109,7 @@
                     Philosophy (Brahma Vidya) <br/>               
                 </p>                
             </li>           
-        </ul>
+        </ul>       
 
         <div class="pt-4 pb-4">
                 <a class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -141,7 +143,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
+            <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
       </div>
@@ -160,7 +162,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>support@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
         </div>
       </div>
     </div>
