--- a/en/courses/upavedas.html
+++ b/en/courses/upavedas.html
@@ -46,7 +46,7 @@
   <div class="container">    
     <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -80,17 +80,28 @@
   </div>
 </nav>
 <!--MAIN HEADER AREA END -->
-
+<div class="page-banner-area2 page-service bg-primary2"  id="page-banner"></div>
 <section class="pt-4">
     <div class="container pt-4">
         <div class="pt-4 pb-4">
                 <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
         </div>
         <h3 class="pt-4 pb-4">Academic Courses in Upavedas (4)</h3>
+        <p>
+            The term Upa-Vēda (“applied knowledge”) is used in traditional literature to designate the subjects of certain 
+            technical works. Lists of what subjects are included in this class differ among sources. 
+            As per the Caraṇavyuha, these are: -<br/>
+            1.	Āyurvēda (Medical Sciences associated with Rig Vēda).<br/>
+            2.	Dhanurvēda (Warfare associated with Yajur Vēda).<br/>
+            3.	Gāndharvavēda (Music and dance associated with Sāma Vēda).<br/>
+            4.	Arthavēda or Shilpavidya (Economics, Technology associated with Atharva Vēda).   <br/>
+
+        </p>
         <ul>
             <li>
                 <h4  id="UV-01" class="text-primary">1. Ayurveda (UV-01)</h4>
-                <p>                   
+                <p>             
+                    Āyurvēda (Medical Sciences associated with Rig Vēda).      
                 </p>      
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -99,7 +110,8 @@
 
             <li>
                 <h4  id="UV-02" class="text-primary">2. Dhanurveda (UV-02)</h4>
-                <p>                   
+                <p>         
+                    Dhanurvēda (Warfare associated with Yajur Vēda).          
                 </p>    
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -108,7 +120,8 @@
 
             <li>
                 <h4  id="UV-03" class="text-primary">3. Ghandarva Vidya (UV-03)</h4>
-                <p>                   
+                <p>        
+                    Gāndharvavēda (Music and dance associated with Sāma Vēda).           
                 </p>       
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -117,7 +130,8 @@
 
             <li>
                 <h4  id="UV-04" class="text-primary">4. Artha Vēda or Shilpa Vidya (UV-04)</h4>
-                <p>                   
+                <p>      
+                    Arthavēda or Shilpavidya (Economics, Technology associated with Atharva Vēda).                
                 </p>  
                 <div class="pt-4 pb-4">
                     <a  class="text-primary" href="/en/academics.html">Back to Academics</a>
@@ -155,7 +169,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
+            <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
       </div>
@@ -174,7 +188,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>support@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
         </div>
       </div>
     </div>
