--- a/en/portfolio.html
+++ b/en/portfolio.html
@@ -47,7 +47,7 @@
   <div class="container">    
     <div class="text-white text-center d-block d-sm-none">University of Applied Vedic Sciences (Online)</div>
     <a class="navbar-brand" href="/en/index.html">
-      <img src="/assets/images/logo-white.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
+      <img src="/assets/images/logo-white3.png" alt="University of Vedic Sciences" class="img-fluid b-logo"
       style="max-height:100px;">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav" aria-controls="mainNav"
@@ -345,7 +345,7 @@
             <li><a href="/en/about.html">About</a></li>
             <li><a href="/en/founder.html">Founder</a></li>            
             <li><a href="/en/faculty.html">Faculty</a></li>
-            <li><a href="/en/advisory.html">Advisory Board</a></li>                  
+            <li><a href="/en/advisory.html">Board Members</a></li>                  
           </ul>
         </div>
       </div>
@@ -364,7 +364,7 @@
       <div class="col-lg-3 col-md-4 col-sm-12">
         <div class="footer-widget footer-text">
           <h4>Reach Us</h4>
-          <p class="mail"><span>Email: </span>support@vedic.university</p>
+          <p class="mail"><span>Email: </span>namaste@vedic.university</p>
         </div>
       </div>
     </div>
